--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,142 @@
-#wrap {width: 100%;}
-header {display: flex; flex-flow: row nowrap; justify-content: space-between; align-items: center;}
+#wrap {width: 100%; min-width: 1680px;}
+/* 헤더 */
+header {
+    display: flex; flex-flow: row nowrap; justify-content: space-between; 
+    align-items: center; position: sticky; z-index: 999; width: 100%;
+    padding: 0 50px; position: absolute; /* 헤더 상단 고정 */
+}
 #gnb ul {display: flex; flex-flow: row nowrap; gap: 115px;}
+.right_lnb {display: flex; flex-flow: row nowrap; gap: 23px;}
+
+/* 메인배너 */
+.main_contents {
+    position: absolute; z-index: 10; top: 50%; left: 22%;
+}
+.main_txt {font-size: 3rem;}
+#main_bnr {position: relative;}
+
+/* 카테고리 */
+.category {
+    display: flex; flex-flow: row nowrap; background-image: url(../images/Frame\ 20.png);
+    justify-content: center; align-items: center; height: 760px; gap: 59px;
+}
+.category_img {display: flex; flex-flow: row nowrap; gap: 10px;}
+.category_txt > h1 {font-size: 3.125rem; position: relative; display: inline-block; padding-bottom: 62px;}
+.category_txt > h1::after {
+    content: ''; position: absolute; left: 50%; top: 70%;
+    display: inline-block; width: 18px; height: 2px; background-color:#664B4B; opacity: 50%;
+}
+
+.img1, .img2 {position: relative;}
+.skintxt, .handtxt {position: absolute; left: 50%; transform: translateX(-50%); top: 50%;}
+.img3 a:first-child {position: relative; display: inline-block;}
+.img3 a:last-child {position: relative; display: inline-block;}
+.hometxt, .hairtxt {position: absolute;left: 50%; transform: translateX(-50%); top: 50%;}
+
+.img2 {padding-bottom:5px ;}
+.img3 a {padding-right: 7px;}
+
+/* 뉴 프래그런스 */
+.fragrance {
+    display: flex; flex-flow: row nowrap; justify-content: space-between; align-items: center;
+    background: #F9F9F9; height: 805px;
+}
+.fragrance_txt {text-align: center;}
+.fragrance_txt > h1 {font-size:3.125rem ; position: relative; display: inline-block; padding-bottom: 62px;}
+.fragrance_txt > h1::after {
+    content: ''; position: absolute; left: 50%; top: 70%;
+    display: inline-block; width: 18px; height: 2px; background-color:#664B4B; opacity: 50%;
+}
+
+.bnr_left_img {padding-top: 55px;}
+.more_btn {width: 176px; height: 59px; text-align: center;  background-color: #4E3939; line-height: 59px; margin: 0 auto;}
+
+.top_img img {padding-bottom: 23px;}
+.bottom_img img:first-child {padding-right:23px ;}
+
+
+
+/* 퍼스널 텍스트 */
+.personal {text-align: center;}
+.personal_txt > h1{font-size: 2.813rem; padding-top: 114px;}
+.personal_txt > span {display: block; padding: 30px 0;}
+.personal_txt > p {padding-bottom: 73px;}
+
+/* 퍼스널 스와이퍼 ----------아워컬렉션 아이템 */
+#Personal_item {
+    padding-bottom: 30px; 
+    margin-bottom: 167px;
+}
+
+.product {
+    background:#F9F9F9 ; width: 366px; height: 452px; text-align: center; position: relative;
+    display: flex; flex-flow: column nowrap; justify-content: center; gap: 31px; border-radius: 10px;
+}
+.product_contents img {padding-top: 60px;}
+.product_txt {text-align: left; padding-left:39px ;}
+.product_txt a > h2 {padding-bottom:23px ;}
+.product_txt > p {padding-bottom:15px; line-height: 150%; font-size: 0.813rem;}
+.heart {position: absolute; right: 24px; top: 24px;}
+
+/* 기프트 */
+.right_gift {width: 956px; height: 842px; position: relative; z-index: 1;}
+.right_gift::after {
+    content: '';
+    background-image: url(../images/Rectangle\ 33.png); 
+    background-size: cover;
+    background-repeat: no-repeat ; position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    opacity: 0.6; z-index: -1;
+}
+.gift {display: flex; flex-flow: row nowrap;}
+.right_gift {text-align: center; display: flex; flex-flow: column nowrap; justify-content: center; align-items: center;}
+.right_gift_txt >h1{font-size: 3.125rem; padding-bottom: 62px;}
+.right_gift_txt .txt1 {display: block; padding-bottom: 30px;}
+.right_gift_txt span {display: block; padding-bottom: 76px;}
+#gift_more_btn {width:176px ; height: 45px; border: 1px solid #C2C2C2;}
+
+/* 아워컬렉션 */
+.our_txt {text-align: center; padding-top: 167px; padding-bottom: 69px;}
+.our_txt > h1 {font-size: 2.813rem; position: relative; display: inline-block; padding-bottom: 62px;}
+.our_txt > h1::after {
+    content: ''; position: absolute; left: 50%; top: 70%;
+    display: inline-block; width: 18px; height: 2px; background-color:#664B4B; opacity: 50%;
+}
+#our_btn {width: 124px; height: 47px; border: 1px solid #DBDBDB; display: block; margin: 60px auto; }
+
+.our_item > .product {background:#F9F9F9 ; width: 345px; height: 427px;}
+.our_item {display: flex; flex-flow: row nowrap; justify-content: space-between; width: 1440px; margin: 0 auto;}
+.item2 {padding: 40px 0;}
+
+/* neighbourly광고 */
+.neighbourly {position: relative;}
+.neighbourly .nei_txt {position: absolute; top: 35%; right: 16%; color: #fff; text-align: center;}
+.neighbourly .nei_txt > h1 {color: #fff; font-size: 3.125rem; padding-bottom: 25px;}
+.neighbourly .nei_txt > p {color: #fff; text-align: left; padding-bottom: 78px;}
+.neighbourly #nei_btn {color: #fff; border: 1px solid #D9D9D9; width: 214px; height: 45px; }
+
+.neighbourly {background-image: 
+    linear-gradient(to left, 
+            /* 1. 오른쪽 끝(0%)을 가장 진하게 설정 (거의 검은색) */
+            rgba(0, 0, 0, 0.9) 0%, 
+            /* 2. 화면의 20% 지점까지 진한 색을 유지 */
+            rgba(0, 0, 0, 0.8) 30%,
+            /* 3. 20% 지점부터 50% 지점까지 빠르게 투명해지도록 설정 */
+            rgba(0, 0, 0, 0) 70% 
+            ),
+    url(../images/Frame56.png);
+    width: 100%; height: 705px ;
+}
+
+/* 레코딩 배너 */
+.reading_bg {background-image: url(../images/Frame61.png); width: 100%; height: 720px;}
+.reading_size {width: 1440px; margin: 0 auto; display: flex; flex-flow: row nowrap; align-items: center; } 
+.finder_bg {background-image: url(../images/bottom_img.png); width: 100%; height: 720px;}
+
+.reading_right {text-align: left; padding-left: 201px; top: 50%; transform: translateY(-50%);}
+.reading_right > p {line-height: 150%;}
+
+
+.reading_left img {transform: translateY(0);}/* 배너 왼쪽 겹쳐진 이미지 */
+.reading_left > h1 {font-size: 3.125rem; padding-top: 142px;}
+.reading_left > p {padding-bottom: 44px; padding-top: 16px; }
