--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,10 @@ header {
 }
 
 .bnr_left_img {padding-top: 55px;}
-.more_btn {width: 176px; height: 59px; text-align: center;  background-color: #4E3939; line-height: 59px; margin: 0 auto;}
+#more_button {
+    width: 176px; height: 59px; text-align: center; margin-top:58px ;
+    background-color: #4E3939; line-height: 59px; display: inline-block; text-align: center;
+}
 
 .top_img img {padding-bottom: 23px;}
 .bottom_img img:first-child {padding-right:23px ;}
@@ -102,7 +105,7 @@ header {
     content: ''; position: absolute; left: 50%; top: 70%;
     display: inline-block; width: 18px; height: 2px; background-color:#664B4B; opacity: 50%;
 }
-#our_btn {width: 124px; height: 47px; border: 1px solid #DBDBDB; display: block; margin: 60px auto; }
+#our_btn {width: 124px; height: 47px; border: 1px solid #DBDBDB; display: block; margin: 60px auto 181px;}
 
 .our_item > .product {background:#F9F9F9 ; width: 345px; height: 427px;}
 .our_item {display: flex; flex-flow: row nowrap; justify-content: space-between; width: 1440px; margin: 0 auto;}
@@ -117,26 +120,54 @@ header {
 
 .neighbourly {background-image: 
     linear-gradient(to left, 
-            /* 1. 오른쪽 끝(0%)을 가장 진하게 설정 (거의 검은색) */
-            rgba(0, 0, 0, 0.9) 0%, 
-            /* 2. 화면의 20% 지점까지 진한 색을 유지 */
-            rgba(0, 0, 0, 0.8) 30%,
-            /* 3. 20% 지점부터 50% 지점까지 빠르게 투명해지도록 설정 */
-            rgba(0, 0, 0, 0) 70% 
-            ),
+        /* 1. 오른쪽 끝(0%)을 가장 진하게 설정 (거의 검은색) */
+        rgba(0, 0, 0, 0.9) 0%, 
+        /* 2. 화면의 20% 지점까지 진한 색을 유지 */
+        rgba(0, 0, 0, 0.8) 30%,
+        /* 3. 20% 지점부터 50% 지점까지 빠르게 투명해지도록 설정 */
+        rgba(0, 0, 0, 0) 70% 
+        ),
     url(../images/Frame56.png);
     width: 100%; height: 705px ;
 }
 
-/* 레코딩 배너 */
-.reading_bg {background-image: url(../images/Frame61.png); width: 100%; height: 720px;}
-.reading_size {width: 1440px; margin: 0 auto; display: flex; flex-flow: row nowrap; align-items: center; } 
-.finder_bg {background-image: url(../images/bottom_img.png); width: 100%; height: 720px;}
+/* 리딩 배너 */
+.reading {margin-top: 183px;}
+.reading_bg {
 
-.reading_right {text-align: left; padding-left: 201px; top: 50%; transform: translateY(-50%);}
-.reading_right > p {line-height: 150%;}
+    background-image: 
+    linear-gradient(to left, 
+        /* 1. 오른쪽 끝(0%)을 가장 진하게 설정 (거의 검은색) */
+        rgba(0, 0, 0, 0.9) 0%, 
+        /* 2. 화면의 20% 지점까지 진한 색을 유지 */
+        rgba(0, 0, 0, 0.6) 30%,
+        /* 3. 20% 지점부터 50% 지점까지 빠르게 투명해지도록 설정 */
+        rgba(0, 0, 0, 0) 70% 
+        ),
+    url(../images/Frame61.png); 
+    width: 100%; height: 720px;
+}
+.reading_size {width: 1440px; margin: 0 auto; display: flex; flex-flow: row nowrap; } 
 
+.reading_right {text-align: left; padding-left: 201px; padding-top: 260px;}
+.reading_right > p {line-height: 150%; font-size: 0.875rem;}
+.reading_right > p:first-child {padding-bottom:22px ; font-size: 0.938rem;}
+#reading_btn {width: 250px; height: 43px; border: 1px solid #D9D9D9; margin-top: 71px; font-size: 0.875rem;}
 
 .reading_left img {transform: translateY(0);}/* 배너 왼쪽 겹쳐진 이미지 */
 .reading_left > h1 {font-size: 3.125rem; padding-top: 142px;}
 .reading_left > p {padding-bottom: 44px; padding-top: 16px; }
+
+/* 프래그런스 파인더 */
+.finder_bg {
+    background-image: url(../images/bottom_img.png); width: 100%; height: 886px;
+    display: flex; flex-flow: row nowrap; justify-content: right;
+}
+.finder_left {background: yellow; padding-top:296px ; text-align: right;}
+.finder_left >h1 {font-size: 3.125rem; padding-bottom: 55px;}
+.finder_left >p {padding-bottom: 41px; text-align: right;}
+#finder_btn {width: 250px; height: 43px; border: 1px solid #3F3939;}
+.finder_right img {margin-top: 143px; padding-left: 224px;}
+
+/* 푸터 */
+footer {width: 100%; height: 650px; background: #e9e9e9; margin-top: 243px;}
