--- a/styles/index.css
+++ b/styles/index.css
@@ -1,18 +1,23 @@
-#wrap {width: 100%; min-width: 1680px;}
+#wrap {width: 100%; min-width: 1900px;}
+header {min-width: 1900px;}
 /* 헤더 */
 header {
-    display: flex; flex-flow: row nowrap; justify-content: space-between; 
+    display: flex; flex-flow: row nowrap; height: 82px;
     align-items: center; position: sticky; z-index: 999; width: 100%;
     padding: 0 50px; position: absolute; /* 헤더 상단 고정 */
 }
-#gnb ul {display: flex; flex-flow: row nowrap; gap: 115px;}
+#gnb ul {display: flex; flex-flow: row nowrap; gap: 115px; padding-left: 139px; padding-right:288px ;}
+#gnb ul li > a {color: #DBDBDB;}
 .right_lnb {display: flex; flex-flow: row nowrap; gap: 23px;}
 
 /* 메인배너 */
 .main_contents {
-    position: absolute; z-index: 10; top: 50%; left: 22%;
+    position: absolute; z-index: 10; top: 50%; left: 18%;
 }
-.main_txt {font-size: 3rem;}
+.main_txt {font-size: 4rem;}
+.main_txt h1,h2 {color: #fff;  font-family: 'Sorts Mill Goudy', serif; padding-bottom: 11px;}
+.main_txt h2 {font-size:2rem ;}
+.main_button {color: #fff; font-size: 0.875rem; border: 1px solid #fff; width: 112px; height: 37px; margin-top: 56px;}
 #main_bnr {position: relative;}
 
 /* 카테고리 */
@@ -171,20 +176,29 @@ header {
 
 /* 푸터 */
 footer {width: 100%; height: 650px; background: #252525; margin-top: 243px;}
-.f_contents .f_top {width:1379px ; margin: 0 auto; display: flex; justify-content: space-between;}
+.f_contents .f_top {
+    width:1379px ; margin: 0 auto; display: flex; justify-content: space-between;
+    padding-top: 45px;
+}
+.position_contents {padding-top: 80px;}
+
 .f_contents .f_bottom {width: 1384px; margin: 0 auto;}
 
-.f_txt , .f_bottom_right {display: flex; flex-flow: row nowrap;}
+.f_bottom {display: flex; flex-flow: row nowrap; padding-top: 50px;}
+
+.f_txt , .f_bottom_right {display: flex; flex-flow: row nowrap; padding-top:50px ;}
+.f_bottom_right {padding-left: 90px;}
 .f_txt_service_contents {display: flex; flex-flow: row nowrap;}
 .service {display: flex; flex-flow: column nowrap;}
 .f_top {display: flex; flex-flow: row nowrap;}
 
-.f_contents h3 {font-weight: 600; color: #ffffff; padding-right: 54px;}
+.f_contents .company {}
+.f_contents h3 {font-weight: 600; color: #ffffff; padding-right: 60px; position: relative;}
 .f_contents h3::after {
-    content: '';
-
-    content: ''; position: absolute; left: 50%; top: 70%;
-    display: inline-block; width: 18px; height: 2px; background-color:#664B4B; opacity: 50%;
+    content: ''; position: absolute; right: 30px;
+    display: inline-block; width: 1px; height: 16px; background-color:#D9D9D9; opacity: 70%;
 }
 .f_contents li a {font-size:0.875rem; color: #ffffff;}
 .f_contents li {padding-bottom:25px ;}
+
+.f_bottom_right ul > li {width: 482px;}
