--- a/styles/index.css
+++ b/styles/index.css
@@ -2,13 +2,24 @@
 header {min-width: 1900px;}
 /* 헤더 */
 header {
-    display: flex; flex-flow: row nowrap; height: 82px;
+    display: flex; flex-flow: row nowrap; height: 82px; 
     align-items: center; position: sticky; z-index: 999; width: 100%;
     padding: 0 50px; position: absolute; /* 헤더 상단 고정 */
 }
-#gnb ul {display: flex; flex-flow: row nowrap; gap: 115px; padding-left: 139px; padding-right:288px ;}
-#gnb ul li > a {color: #DBDBDB;}
+#gnb > ul {display: flex; flex-flow: row nowrap; gap: 115px; padding-left: 139px; padding-right:288px ;}
+#gnb > ul > li > a {color: #DBDBDB;}
 .right_lnb {display: flex; flex-flow: row nowrap; gap: 23px;}
+
+/* 헤더 마우스 올렸을때 */
+header:hover {width: 100%; height: 82px; background-color: #ffffff; z-index: 9999; }
+header:hover #gnb a {color: #3F3939; font-weight: 600;}
+header:hover img {content: url("../images/Rectangle-1.png");}
+.sub_menu {position: absolute; top: 100%; display: flex; flex-flow: row nowrap; left: 15%;} 
+.sub_menu_txt {display: flex; flex-flow: column nowrap;}
+
+
+
+
 
 /* 메인배너 */
 .main_contents {
