이솝 css 마무리

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,8 @@ header {
     align-items: center; position: sticky; z-index: 999; width: 100%;
     padding: 0 50px; position: absolute; /* 헤더 상단 고정 */
 }
-#gnb > ul {display: flex; flex-flow: row nowrap; gap: 115px; padding-left: 139px; padding-right:288px ;}
-#gnb > ul > li > a {color: #DBDBDB;}
+#gnb > ul {display: flex; flex-flow: row nowrap; /* gap: 5px; */ /* padding-left: 139px; */ padding-right:288px ;}
+#gnb > ul > li > a {color: #DBDBDB; display: block; width: 100%;}
 .right_lnb {display: flex; flex-flow: row nowrap; gap: 23px;}
 
 
@@ -19,7 +19,8 @@ header:hover {
     z-index: 999;
 }
 
-header #gnb > ul > li > a {display: block; width: 100%; padding: 41px 0; position: relative; }
+header #gnb > ul > li > a {display: block; width: 100%; padding: 41px 51px; position: relative; }
+header #gnb > ul > li:first-child {margin-left: 100px;}
 
 header #gnb > ul > li > a::after { /* 각메뉴 밑줄 */
     content: '';
@@ -55,8 +56,11 @@ header:hover #gnb .sub_menu_txt li:first-child > a {color: #3F3939; font-weight:
 header:hover .logo {
     content: url("../images/Rectangle-1.png");
 }
-header:hover .search-icon path {
-    fill: #FF6600;
+header:hover .search svg path {
+    fill: #3F3939;
+}
+header:hover .login svg path {
+    fill: #3F3939;
 }
 
 
@@ -81,7 +85,8 @@ header:hover .search-icon path {
     display: flex;
     flex-flow: column nowrap;
     gap: 14px;
-    padding-right: 150px;
+    width: 210px;
+    margin-right: 100px;
 }
 .sub_menu_img {
     display: flex;
@@ -93,6 +98,8 @@ header:hover .search-icon path {
 
 
 h1 {font-family: 'Sorts Mill Goudy', serif;}
+
+
 /* 메인배너 */
 .main_contents {
     position: absolute; z-index: 10; top: 50%; left: 18%;
@@ -103,6 +110,21 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 .main_txt > h2 {font-size:2rem ;}
 .main_button {color: #fff; font-size: 0.875rem; border: 1px solid #fff; width: 112px; height: 37px; margin-top: 56px;}
 #main_bnr {position: relative;}
+.main_txt2 .bnr_2 {font-size: 3rem; color:#ffffff ; margin-bottom: 25px;}
+.main_txt2 .bnr_txt {color:#ffffff ; line-height: 150%;}
+
+
+.slide1 {position: relative;}
+.slide1::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
 
 /* 카테고리 */
 .category {
@@ -131,10 +153,10 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 .category_img a {
     position: relative;
     display: inline-block;
-    overflow: hidden; /* 이거 필수! */
+    overflow: hidden;
 }
 .category_img a img {
-    display: block; /* 이거도 필수, 기본 inline이면 하단여백 생김 */
+    display: block; 
 }
 
 .category_img a::after {
@@ -148,9 +170,17 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 
 .category_img a::after {
     opacity: 0;
+    transition: opacity 0.2s ease; /* 카테고리 마우스 올리면 효과*/
 }
 .category_img a:hover::after {
     opacity: 1;
+}
+.category_img img {
+transition: transform 0.5s ease;
+}
+
+.category_img a:hover img {
+transform: scale(1.05); /* 카테고리 마우스 올리면 이미지확대*/
 }
 
 
@@ -180,13 +210,21 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 .bnr_left_img {padding-top: 55px;}
 #more_button {
     width: 176px; height: 59px; text-align: center; margin-top:58px ;
-    background-color: #4E3939; line-height: 59px; display: inline-block; text-align: center;
-    font-size: 0.875rem; color: #fff;
+    border: 1px solid #C2C2C2;
+    /* background-color: #4E3939; */ line-height: 59px; display: inline-block; text-align: center;
+    font-size: 0.875rem; color: #4E3939;
+    transition: all 0.3s ease;
 }
+#more_button svg path {fill :#4E3939 ;  transition: fill 0.3s ease;}
+#more_button:hover {
+    background: #4E3939;
+    color: #ffffff;
+}
+#more_button:hover svg path {fill :#ffffff ;}
+
 #more_button svg {padding-left: 10px; }
 .top_img img {padding-bottom: 23px;}
 .bottom_img img:first-child {padding-right:23px ;}
-
 
 
 /* 퍼스널 텍스트 */
@@ -232,8 +270,16 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 .right_gift_txt >h1{font-size: 3.125rem; padding-bottom: 62px; color: #4E3939;}
 .right_gift_txt .txt1 {display: block; padding-bottom: 30px; }
 .right_gift_txt span {display: block; padding-bottom: 76px; color: #3F3939;line-height: 150%; }
-#gift_more_btn {width:176px ; height: 45px; border: 1px solid #C2C2C2; font-size: 0.875rem; color: #404040;}
+#gift_more_btn {width:176px ; height: 45px; border: 1px solid #C2C2C2; font-size: 0.875rem; color: #404040; transition: all 0.3s ease;}
 #gift_more_btn svg {padding-left:10px ;}
+
+#gift_more_btn svg path { transition: fill 0.3s ease;}
+#gift_more_btn:hover {
+    background: #4E3939;
+    color: #ffffff;
+}
+#gift_more_btn:hover svg path {fill :#ffffff ;}
+
 
 /* 아워컬렉션 */
 .our_txt {text-align: center; padding-top: 167px; padding-bottom: 69px;}
@@ -259,6 +305,7 @@ h1 {font-family: 'Sorts Mill Goudy', serif;}
 .neighbourly .nei_txt > p {color: #E8E8E8; text-align: left; padding-bottom: 78px; line-height: 150%;}
 .neighbourly #nei_btn {color: #fff; border: 1px solid #D9D9D9; width: 214px; height: 45px; color: #D9D9D9; font-size: 0.875rem;}
 .neighbourly #nei_btn svg {padding-left: 10px;}
+
 
 .neighbourly {background-image: 
     linear-gradient(to left, 
